2 thems broken version

--- a/index.html
+++ b/index.html
@@ -17,42 +17,52 @@
             <div data-key="65"class="box key1">
               <span class="letter">A</span>
               <span class="sound">ding</span>
+              <span class="sound2">♫♫</span>
             </div>
             <div data-key="90"class="box key2">
               <span class="letter">Z</span>
               <span class="sound">work it</span>
+              <span class="sound2">♫♫</span>
             </div>
             <div data-key="69"class="box key3">
               <span class="letter">E</span>
               <span class="sound">make it</span>
+              <span class="sound2">pain</span>
             </div>
             <div data-key="82"class="box key4">
               <span class="letter">R</span>
               <span class="sound">do it</span>
+              <span class="sound2">made me</span>
             </div>
             <div data-key="84"class="box key5">
               <span class="letter">T</span>
               <span class="sound">make us</span>
+              <span class="sound2">made me</span>
             </div>
             <div data-key="89"class="box key6">
               <span class="letter">Y</span>
               <span class="sound">ding</span>
+              <span class="sound2">believer</span>
             </div>
             <div data-key="85"class="box key7">
               <span class="letter">U</span>
               <span class="sound">harder</span>
+              <span class="sound2">believer</span>
             </div>
             <div data-key="73"class="box key8">
               <span class="letter">I</span>
               <span class="sound">better</span>
+              <span class="sound2">♫♫</span>
             </div>
             <div data-key="79"class="box key9">
               <span class="letter">O</span>
               <span class="sound">faster</span>
+              <span class="sound2">pain</span>
             </div>
             <div data-key="80"class="box key10">
               <span class="letter">P</span>
               <span class="sound">stronger</span>
+              <span class="sound2">break me</span>
             </div>
             <div data-key="8"class="box key11">
               <span class="letter">Backspace</span>
@@ -63,72 +73,88 @@
             <div data-key="81"class="box key12">
               <span class="letter">Q</span>
               <span class="sound">ding</span>
+              <span class="sound2">build me</span>
             </div>
             <div data-key="83"class="box key13">
               <span class="letter">S</span>
               <span class="sound">more than</span>
+              <span class="sound2">believer</span>
             </div>
             <div data-key="68"class="box key14">
               <span class="letter">D</span>
               <span class="sound">hour</span>
+              <span class="sound2">believer</span>
             </div>
             <div data-key="70"class="box key15">
               <span class="letter">F</span>
               <span class="sound">our</span>
+              <span class="sound2">pain/<span>
             </div>
             <div data-key="71"class="box key16">
               <span class="letter">G</span>
               <span class="sound">never</span>
+              <span class="sound2">bullets fly</span>
             </div>
             <div data-key="72"class="box key17">
               <span class="letter">H</span>
               <span class="class">ding</span>
+              <span class="sound2">rain</span>
             </div>
             <div data-key="74"class="box key18">
               <span class="letter">J</span>
               <span class="sound">ever</span>
+              <span class="sound2">my life</span>
             </div>
             <div data-key="75"class="box key19">
               <span class="letter">K</span>
               <span class="sound">after</span>
+              <span class="sound2">my love</span>
             </div>
             <div data-key="76"class="box key20">
               <span class="letter">L</span>
               <span class="sound">work is</span>
+              <span class="sound2">my drive</span>
             </div>
             <div data-key="77"class="box key21">
               <span class="letter">M</span>
               <span class="sound">over</span>
+              <span class="sound2">came from</span>
             </div>
             <div data-key="13"class="box key22">
               <span class="letter">Enter</span>
-              <span class="playmusic">Play</span>
+              <span class="musicChoice">song 2</span>
             </div>
           </div>
           <div class="lign3">
             <div data-key="87"class="box key23">
               <span class="letter">W</span>
               <span class="sound">ding</span>
+              <span class="sound2">♫♫</span>
             </div>
             <div data-key="88"class="box key24">
               <span class="letter">X</span>
               <span class="sound">work it</span>
+              <span class="sound2">pain</span>
             </div>
             <div data-key="67"class="box key25">
               <span class="letter">C</span>
               <span class="sound">make it</span>  
+              <span class="sound2">made me</span>
             </div>
             <div data-key="86"class="box key26">
               <span class="letter">V</span>
               <span class="sound">do it</span>
+              <span class="sound2">made me</span>
             </div>
             <div data-key="66"class="box key27">
               <span class="letter">B</span>
               <span class="sound">make us</span>
+              <span class="sound2">beliver</span>
             </div>
             <div data-key="78"class="box key28">
               <span class="letter">N</span>
               <span class="sound">ding</span>
+              <span class="sound2">beliver</span>
             </div>
             <div data-key="37"class="box key29">
               <span class="letter">ArrowLeft</span>
@@ -168,32 +194,32 @@
         <audio data-key="66" data-id="make us"src="sounds/BKey.mp3"></audio>
         <audio data-key="78" data-id="ding"src="sounds/NKey.mp3"></audio>
         <!-- AUDIO 2 -->
-        <!-- <audio data-key="65" data-id="♫♫"src="sounds/AKey.mp3"></audio>
-        <audio data-key="90" data-id="♫♫"src="sounds/ZKey.mp3"></audio>
-        <audio data-key="69" data-id="Pain!"src="sounds/EKey.mp3"></audio>
-        <audio data-key="82" data-id="You made me a"src="sounds/RKey.mp3"></audio>
-        <audio data-key="84" data-id="you made me a"src="sounds/TKey.mp3"></audio>
-        <audio data-key="89" data-id="believer"src="sounds/YKey.mp3"></audio>
-        <audio data-key="85" data-id="believer"src="sounds/UKey.mp3"></audio>
-        <audio data-key="73" data-ide="♫♫"src="sounds/IKey.mp3"></audio>
-        <audio data-key="79" data-id="Pain!"src="sounds/OKey.mp3"></audio>
-        <audio data-key="80" data-id="You break me down"src="sounds/PKey.mp3"></audio>
-        <audio data-key="81" data-id="and build me up"src="sounds/QKey.mp3"></audio>
-        <audio data-key="83" data-id="believer"src="sounds/SKey.mp3"></audio>
-        <audio data-key="68" data-id="believer"src="sounds/DKey.mp3"></audio>
-        <audio data-key="70" data-id="Pain!"src="sounds/FKey.mp3"></audio>
-        <audio data-key="71" data-id="Oh, let the bullets fly,"src="sounds/GKey.mp3"></audio>
-        <audio data-key="72" data-id="oh, let them rain"src="sounds/HKey.mp3"></audio>
-        <audio data-key="74" data-id="My life,"src="sounds/JKey.mp3"></audio>
-        <audio data-key="75" data-id="my love,"src="sounds/KKey.mp3"></audio>
-        <audio data-key="76" data-id="my drive,"src="sounds/LKey.mp3"></audio>
-        <audio data-key="77" data-id="it came from...src="sounds/MKey.mp3"></audio>
-        <audio data-key="87" data-id="♫♫"src="sounds/WKey.mp3"></audio>
-        <audio data-key="88" data-id="Pain!"src="sounds/XKey.mp3"></audio>
-        <audio data-key="67" data-id="You made me a,"src="sounds/CKey.mp3"></audio>
-        <audio data-key="86" data-id="you made me a"src="sounds/VKey.mp3"></audio>
-        <audio data-key="66" data-id="believer,"src="sounds/BKey.mp3"></audio>
-        <audio data-key="78" data-id="believer"src="sounds/NKey.mp3"></audio> -->
+        <audio data-info="65" data-id="♫♫"src="sounds/AKey2.mp3"></audio>
+        <audio data-info="90" data-id="♫♫"src="sounds/ZKey2.mp3"></audio>
+        <audio data-info="69" data-id="Pain!"src="sounds/EKey2.mp3"></audio>
+        <audio data-info="82" data-id="You made me a"src="sounds/RKey2.mp3"></audio>
+        <audio data-info="84" data-id="you made me a"src="sounds/TKey2.mp3"></audio>
+        <audio data-info="89" data-id="believer"src="sounds/YKey2.mp3"></audio>
+        <audio data-info="85" data-id="believer"src="sounds/UKey2.mp3"></audio>
+        <audio data-info="73" data-ide="♫♫"src="sounds/IKey2.mp3"></audio>
+        <audio data-info="79" data-id="Pain!"src="sounds/OKey2.mp3"></audio>
+        <audio data-info="80" data-id="You break me down"src="sounds/PKey2.mp3"></audio>
+        <audio data-info="81" data-id="and build me up"src="sounds/QKey2.mp3"></audio>
+        <audio data-info="83" data-id="believer"src="sounds/SKey2.mp3"></audio>
+        <audio data-info="68" data-id="believer"src="sounds/DKey2.mp3"></audio>
+        <audio data-info="70" data-id="Pain!"src="sounds/FKey2.mp3"></audio>
+        <audio data-info="71" data-id="Oh, let the bullets fly,"src="sounds/GKey2.mp3"></audio>
+        <audio data-info="72" data-id="oh, let them rain"src="sounds/HKey2.mp3"></audio>
+        <audio data-info="74" data-id="My life,"src="sounds/JKey2.mp3"></audio>
+        <audio data-info="75" data-id="my love,"src="sounds/KKey2.mp3"></audio>
+        <audio data-info="76" data-id="my drive,"src="sounds/LKey2.mp3"></audio>
+        <audio data-info="77" data-id="it came from..."src="sounds/MKey2.mp3"></audio>
+        <audio data-info="87" data-id="♫♫"src="sounds/WKey2.mp3"></audio>
+        <audio data-info="88" data-id="Pain!"src="sounds/XKey2.mp3"></audio>
+        <audio data-info="67" data-id="You made me a,"src="sounds/CKey2.mp3"></audio>
+        <audio data-info="86" data-id="you made me a"src="sounds/VKey2.mp3"></audio>
+        <audio data-info="66" data-id="believer,"src="sounds/BKey2.mp3"></audio>
+        <audio data-info="78" data-id="believer"src="sounds/NKey2.mp3"></audio>
     </div>
     <script src= "scripts/script.js"></script>
 </body>
