comment + change audio

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1 class="title">Play your song</h1>
+    <!-- WORDS CONTAINER  -->
     <div class="words"></div>
     <div class="container">
         <!-- PADS CONTAINER  -->
@@ -157,11 +158,11 @@
               <span class="sound2">beliver</span>
             </div>
             <div data-key="37"class="box key29">
-              <span class="letter">ArrowLeft</span>
+              <span class="letter">←</span>
               <span class="volum">-</span>
             </div>
             <div data-key="39"class="box key30">
-              <span class="letter">ArrowRight</span>
+              <span class="letter">→</span>
               <span class="volum">+</span>
             </div>
           </div>
