--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <audio data-key="84" data-id="make us"src="sounds/TKey.mp3"></audio>
         <audio data-key="89" data-id="ding"src="sounds/YKey.mp3"></audio>
         <audio data-key="85" data-id="harder"src="sounds/UKey.mp3"></audio>
-        <audio data-key="73" data-ide="better"src="sounds/IKey.mp3"></audio>
+        <audio data-key="73" data-id="better"src="sounds/IKey.mp3"></audio>
         <audio data-key="79" data-id="faster"src="sounds/OKey.mp3"></audio>
         <audio data-key="80" data-id="stronger"src="sounds/PKey.mp3"></audio>
         <audio data-key="81" data-id="ding"src="sounds/QKey.mp3"></audio>
