--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Drum pad</title>
     <meta name="description" content="description de ma page">
+    <link rel="icon" href="images/favicon.html"/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poiret+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
   </head>
@@ -193,6 +194,7 @@
         <audio data-info="66" data-id="believer,"src="sounds/BKey2.mp3"></audio>
         <audio data-info="78" data-id="believer"src="sounds/NKey2.mp3"></audio>
     </div>
+    <footer>LénaPassionDev 🥳 - mai 2020</footer>
     <script src= "scripts/script.js"></script>
 </body>
 </html>
