--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div data-key="13"class="box key22">
               <span class="letter">Enter</span>
-              <span class="sound">song 2</span>
+              <span class="sound">song 2 Believer</span>
             </div>
           </div>
           <div class="lign2">
@@ -194,7 +194,7 @@
         <audio data-info="66" data-id="believer,"src="sounds/BKey2.mp3"></audio>
         <audio data-info="78" data-id="believer"src="sounds/NKey2.mp3"></audio>
     </div>
-    <footer>LénaPassionDev 🥳 - mai 2020</footer>
+    <footer>LénaPassionDev 🥳- feat Imagine Dragons & Daft Punk - mai 2020</footer>
     <script src= "scripts/script.js"></script>
 </body>
 </html>
