--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-    <!-- <div class="loader">
+    <div class="loader">
       <img src="images/loading.gif" alt="loading">
-    </div> -->
+    </div>
     <h1 class="title">Play your song</h1>
     <!-- WORDS CONTAINER  -->
     <div class="words"></div>
